# agentic-crypto-trading-system

./: .coverage  .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  demo_live.py  paper_trading.py  pyproject.toml  pytest.ini  run_continuous.py
config/: default.yaml
config/agents/: crewai_agents.yaml  langgraph_agents.yaml
config/risk/: aggressive.yaml  conservative.yaml  moderate.yaml
config/strategies/: mean_reversion.yaml  momentum.yaml
deploy/: create_secrets.sh  deploy_all.sh  deploy_gcp.sh  setup_gcp_auth.sh
helm/crypto-trader/: Chart.yaml  values.yaml
helm/crypto-trader/templates/: deployment.yaml  namespace.yaml  pvc.yaml  restart-cronjob.yaml  serviceaccount.yaml
k8s/: fine-tune-job.yaml
src/agentic_crypto_trading_system/: config.py  main.py
src/agentic_crypto_trading_system/agents/: __init__.py  base.py  crewai_framework.py  langgraph_framework.py  tools.py
temp/: test_sample.py
terraform/: gke.tf  jenkins.tf  main.tf  outputs.tf  registry.tf  secrets.tf  terraform.tfvars
tests/: test_config.py  test_crewaiFrame.py  test_database.py  test_exchange_connector.py  test_execution.py  test_langAnalyze.py  test_langgraphFrame.py  test_market_data.py  test_mem_tool.py  test_memory.py  test_regime.py  test_risk.py  test_sentiment.py  test_sentiment_integration.py  test_sentiment_v2.py  test_tools.py
tests/collaboration/: test_collaboration.py
tests/day_trading/: test_news_provider.py  test_position_manager.py
tests/debate/: test_check.py  test_debateService.py
tests/porfolio/: test_portfolio.py
(+63 files in other folders)
